--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,10 @@ body {
     margin: 1.5rem 0px .5rem 0px;
 }
 
+.faq-section:not(:last-of-type) {
+    border-bottom: 1px solid var(--color-200);
+}
+
 .faq-heading {
     margin: 0px;
 }
@@ -90,14 +94,15 @@ body {
 }
 
 .faq-answer {
-    border-bottom: 1px solid var(--color-200);
     color: var(--color-300);
+    font-size: 0.9rem;
     line-height: 1.4;
     overflow: hidden;
     transform: scale(1 , 0);
     transform-origin: top;
     height: 0px;
     opacity: 0;
+    padding-bottom: 1rem;
 }
 
 [aria-expanded="true"] {
